Pushing a variety of cytoscape graphs

--- a/data/gen1.html
+++ b/data/gen1.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<xml>
 <head>
 	<meta charset="utf-8">
 	<title>Pokémon moves from Generation 1 | Pokémon Database</title>
@@ -906,4 +906,4 @@
 </footer>
 
 </body>
-</html>
+</xml>
